Today implemented ArReceipt and changes some backend code for Improvement